# CANgrow

./: .gitignore  HARDWARE.md  LICENSE  README.md
3dprint/ai_generated/: pican-case_DRAFT.scad  pican-case_DRAFT.stl
doc/: API.md  Project Plan.md  Water fittings.md  db.md
doc/ai_generated/: db.md  system.md
src/farm/api/: config.py  main.py  models.py  models_deprecated.py
src/farm/api/models/: environment.py
src/farm/api/routers/: environment_history_router.py  environment_profile_router.py  environment_router.py  environment_target_router.py  environments.py  live_router.py  plant_router.py  plants.py
src/farm/service/: service.py
src/farm/shared/: README.md  pyproject.toml
src/farm/shared/src/shared/: __init__.py  config.py  environment.py  live_cache.py  plant.py
src/farm/shared/src/shared/models/: base_table.py  crop.py  environment.py  environment_history.py  environment_profile.py  environment_target.py  plant.py
src/farm/web/: README.md  index.html  openapi-ts.config.ts  package-lock.json  package.json
src/farm/web/src/: App.vue  main.ts
src/farm/web/src/api/: client.gen.ts  index.ts  sdk.gen.ts  types.gen.ts
src/farm/web/src/assets/: main.css
src/farm/web/src/components/: EnvironmentCard.vue  EnvironmentHistoryLatest.vue  Header.vue
src/farm/web/src/pages/: EnvironmentDetail.vue  Envrionments.vue
src/farm/web/src/router/: index.ts
src/nodes/camera/: README.md  mediamtx.yml  snapshot_server.py
src/nodes/environment/: main.py
