[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shared-models"
version = "0.1.0"
description = "Shared database models for CANgrow"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0"
]

[tool.hatch.build.targets.wheel]
packages = ["src/models"]